--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -128,6 +128,17 @@ color: #dff3d9;
 font-weight: 500;
 }
 
+#pulseaudio {
+padding: 4px 8px;
+padding-top: 4;
+padding-bottom: 0;
+color: #dff3d9;
+background-color: rgba(20, 40, 20, 0.45);
+border-radius: 5px;
+}
+
+
+
 
 * { 
 min-height: 0;
